# Snowglobe-Engine

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  imgui.ini
libraries/include/glad/: gl.h
src/: CMakeLists.txt
src/Core/: CMakeLists.txt  CoreTypesSerialization.hpp  DependencyManager.hpp  EngineProfile.hpp  EngineTime.hpp  FileSystem.cpp  FileSystem.hpp  FileTexture.cpp  FileTexture.hpp  InputConstants.hpp  InputReader.hpp  JsonSerialization.hpp  LifeLinkComponent.hpp  SerializationAPI.hpp  TransformComponent.hpp
src/Core/Assets/: Asset.hpp  AssetManager.cpp  AssetManager.hpp  CMakeLists.txt  PrefabAssetData.hpp  SceneAssetData.hpp
src/Core/ECS/: CMakeLists.txt  Component.hpp  Entity.hpp  EntityData.hpp  EntityManager.hpp  ISystem.hpp  Lifetime.hpp  LifetimeSystem.cpp  LifetimeSystem.hpp  SystemManager.hpp  Tag.hpp  UpdateOrder.hpp
src/Core/ECS/ECSTest/: CMakeLists.txt  ECSTest.cpp  ECSTest.hpp
src/Core/Serialization/: CMakeLists.txt  Deserialize.hpp  JsonSerialization.hpp  SerializationAPI.hpp  Serializer.hpp
src/Engine/: AssimpImporter.cpp  AssimpImporter.hpp  CMakeLists.txt  Collider2DComponent.hpp  ComponentEditor.hpp  ComponentEditorSystem.cpp  ComponentEditorSystem.hpp  Engine.cpp  Engine.hpp  EngineTypesSerialization.hpp  EntityFactory.hpp  InputActionSystem.cpp  InputActionSystem.hpp  LifeLinkSystem.cpp  LifeLinkSystem.hpp  LifetimeComponent.hpp  LifetimeSystem.cpp  LifetimeSystem.hpp  MeshComponent.hpp  Physics2DComponent.hpp  PhysicsEngine2DSystem.cpp  PhysicsEngine2DSystem.hpp  RenderEngineSyncSystem.cpp  RenderEngineSyncSystem.hpp  SceneFactory.hpp  SceneManager.cpp  SceneManager.hpp  SpectatorCamera.cpp  SpectatorCamera.hpp  TextureAssetDataReader.hpp  TweenerSystem.cpp  TweenerSystem.hpp  WorldGridDebugDraw.cpp
src/Engine/Editor/: CommonVisualizers.hpp  EngineInspectorSystem.cpp  EngineInspectorSystem.hpp  SpectatorCameraSystem.cpp  SpectatorCameraSystem.hpp  WorldGridDebugDraw.cpp  WorldGridDebugDraw.hpp
src/Render/: BasicShapeFactory.cpp  BasicShapeFactory.hpp  CMakeLists.txt  Camera.hpp  CommonVertexLayouts.hpp  GizmosAPI.hpp  IndexBufferPtr.hpp  MaterialBase.hpp  MeshProxy.hpp  NEdgeShape2DComponent.hpp  RenderProxy.hpp  RenderSystem.hpp  RenderTypesSerialization.hpp  SpriteAnimationComponent.hpp  SpriteAnimationSystem.hpp  SpriteRenderComponent.hpp  Texture2DPtr.hpp  TextureAssetData.hpp  UISystem.cpp  UISystem.hpp  VertexBufferPtr.hpp  Window.hpp
src/Render/GLFW/: CMakeLists.txt  InputGLFW.cpp  InputGLFW.hpp  WindowGLFW.cpp  WindowGLFW.hpp
src/Render/MaterialsData/: CMakeLists.txt  SpriteMaterialData.hpp  TextureColorMaterialData.hpp  TextureLitMaterialData.hpp  TextureLitOutlineMaterialData.hpp  tmp.cpp
src/RenderOpenGL/: BaseRenderPass.cpp  BaseRenderPass.hpp  CMakeLists.txt  CachedUniformLocations.hpp  CommonVertexLayoutDescriptor.cpp  CommonVertexLayoutDescriptor.hpp  GizmoManager.cpp  GizmoManager.hpp  IVertexLayoutDescriptor.hpp  IndexBufferPtrOpenGL.cpp  IndexBufferPtrOpenGL.hpp  LightParameters.cpp  LightParameters.hpp  LightsManager.cpp  LightsManager.hpp  Mesh.hpp  MeshOpenGL.cpp  MeshOpenGL.hpp  ObjectOutlineRenderPass.hpp  OpenGLRenderSystem.cpp  OpenGLRenderSystem.hpp  PositionColorVertex.hpp  PositionVertex.hpp  PositionVertexLayoutDescriptor.cpp  PositionVertexLayoutDescriptor.hpp  RenderEntity.cpp  RenderEntity.hpp  RenderPass.hpp  SceneParameters.cpp  SceneParameters.hpp  ShaderCompiler.cpp  ShaderCompiler.hpp  Shape2DSystem.cpp  Shape2DSystem.hpp  SimpleShapeMaterial.cpp  SimpleShapeMaterial.hpp  SkyboxRenderPass.cpp  SkyboxRenderPass.hpp  SpriteRenderer.cpp  SpriteRenderer.hpp  (+9 more)
src/RenderOpenGL/Imgui/: CMakeLists.txt  ImguiSystem.cpp  ImguiSystem.hpp
src/RenderOpenGL/Materials/: BasicShapeMaterialImpl.cpp  BasicShapeMaterialImpl.hpp  CMakeLists.txt  IMaterialManager.hpp  MaterialBaseOpenGL.hpp  OutlineTextureLitMaterialImpl.cpp  OutlineTextureLitMaterialImpl.hpp  SpriteMaterial.cpp  SpriteMaterial.hpp  TemplateMaterialManager.hpp  TextureLitMaterialImpl.cpp  TextureLitMaterialImpl.hpp  TextureShapeMaterialImpl.cpp  TextureShapeMaterialImpl.hpp
src/RenderOpenGL/Shaders/: Shape2D.frag  Shape2D.vert  color.frag  color.vert  gizmo.frag  gizmo.vert  screenQuad.frag  screenQuad.vert  skybox.frag  skybox.vert  sprite.frag  sprite.vert  texture.frag  texture.vert  textureLit.frag  textureLit.vert  textureUnlit.frag  textureUnlit.vert
src/RenderVulkan/: CMakeLists.txt  VulkanRenderingSystem.cpp  VulkanRenderingSystem.hpp
src/SnowCore/: CMakeLists.txt  EngineProfile.hpp  EngineTime.hpp  FileTexture.cpp  FileTexture.hpp  ISnowSystem.hpp  InputReader.hpp  NotImplemented.cpp  NotImplemented.hpp  SnowFileSystem.cpp  SnowFileSystem.hpp  TransformComponent.hpp
src/SnowCore/ECS/: CMakeLists.txt  Component.hpp  Entity.hpp  EntityData.hpp  EntityManager.hpp  ISystem.hpp
src/SnowCore/ECS/ECSTest/: CMakeLists.txt  ECSTest.cpp  ECSTest.hpp
src/SnowEngine/: CMakeLists.txt  Collider2DComponent.hpp  ComponentEditor.hpp  ComponentEditorSystem.hpp  MeshComponent.hpp  Physics2DComponent.hpp  PhysicsEngine2DSystem.cpp  PhysicsEngine2DSystem.hpp  RenderEngineSyncSystem.cpp  RenderEngineSyncSystem.hpp  SnowEngine.cpp  SnowEngine.hpp  SnowEntity.hpp  SpectatorCamera.cpp  SpectatorCamera.hpp
src/SnowglobeTest/: CMakeLists.txt  CommonTests.cpp  CommonTests.hpp  RuntimeTest.hpp  ShapesShooter2DTest.cpp  ShapesShooter2DTest.hpp  SnowglobeMain.cpp  scene.txt
src/SnowglobeTest/Assets/: scene.txt
src/SnowglobeTest/Tests/: AnimationTest.cpp  AnimationTest.hpp  Basic3DTest.cpp  Basic3DTest.hpp  CMakeLists.txt  InputActionsTest.cpp  InputActionsTest.hpp  ModelLoading.cpp  ModelLoading.hpp  Physics2DTest.cpp  Physics2DTest.hpp  PrefabTest.cpp  PrefabTest.hpp  SceneSerializationTest.cpp  SceneSerializationTest.hpp  Sprite2DTest.cpp  Sprite2DTest.hpp
src/snowglobe_run/: CMakeLists.txt  main_gl.cpp
